--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -58,7 +58,7 @@ x-airflow-common:
     AIRFLOW__CORE__DAGS_ARE_PAUSED_AT_CREATION: 'true'
     AIRFLOW__CORE__LOAD_EXAMPLES: 'false'
     AIRFLOW__API__AUTH_BACKENDS: 'airflow.api.auth.backend.basic_auth'
-    _PIP_ADDITIONAL_REQUIREMENTS: 'airflow-provider-kafka'  # TODO: replace with adapted implementation
+    _PIP_ADDITIONAL_REQUIREMENTS: 'asgiref confluent-kafka'
   volumes:
     - ./dags:/opt/airflow/dags
     - ./logs:/opt/airflow/logs
