FEAT: implement message schema; produce notification messages; filter upstream messages for data_object_id

--- a/dags/data_objects.yaml
+++ b/dags/data_objects.yaml
@@ -1,36 +1,68 @@
 ---
 source-object-1:
+  type: 
+    - s3
+  id-field:
+    - id
   tags:
     - source
 
 source-object-2:
+  type: 
+    - s3
+  id-field:
+    - id
   tags:
     - source
 
 source-object-3:
+  type: 
+    - s3
+  id-field:
+    - id
   tags:
     - source
 
 source-object-4:
+  type: 
+    - s3
+  id-field:
+    - id
   tags:
     - source
 
 source-object-5:
+  type: 
+    - s3
+  id-field:
+    - id
   tags:
     - source
 
 data-object-1:
+  type: 
+    - postgres
+  id-field:
+    - id
   dependencies:
     - source-object-1
     - source-object-2
     - source-object-3
 
 data-object-2:
+  type: 
+    - postgres
+  id-field:
+    - id
   dependencies:
     - source-object-4
     - source-object-5
 
 data-object-3:
+  type: 
+    - iceberg
+  id-field:
+    - id
   dependencies:
     - source-object-1
     - source-object-2
@@ -38,6 +70,10 @@ data-object-3:
 
 data-object-4:
   schedule: 15
+  type: 
+    - iceberg
+  id-field:
+    - id
   dependencies:
     - data-object-1
     - data-object-2
@@ -46,6 +82,10 @@ data-object-4:
 
 data-object-5:
   schedule: "@daily"
+  type: 
+    - iceberg
+  id-field:
+    - id
   dependencies:
     - data-object-1
     - data-object-3
